[gd_scene load_steps=3 format=3 uid="uid://b0v72xws7qv7b"]

[ext_resource type="Script" uid="uid://bbx8yuyxie7rb" path="res://playerFolder/playerScripts/hit_box.gd" id="1_ido3m"]
[ext_resource type="Texture2D" uid="uid://dsry6kd4ww052" path="res://playerFolder/playerSprites/Sprite-0001.png" id="2_2q6un"]

[node name="hitBox" type="Node2D"]
script = ExtResource("1_ido3m")

[node name="hurtArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 7

[node name="playerExample" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -32)
texture = ExtResource("2_2q6un")

[connection signal="area_entered" from="hurtArea" to="." method="_on_hurt_area_area_entered"]
